sửa lỗi
removefirst thành remove0